--- a/github-like/show_commits.html
+++ b/github-like/show_commits.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+    <h1>『アイの歌声を聴かせて』鑑賞履歴</h1>
     <div id="cal-heatmap" style="margin: auto; width: 30%;"></div>
 
     <script type="text/javascript">
@@ -29,6 +30,8 @@
         start: new Date(2021, 9), // start October, 1st 2021
         data: data,
         legend: [0.0, 0.5, 1.0, 1.5],
+        cellSize: 15,
+        subDomainTextFormat: "%d",
       };
       cal.init(config);
     </script>
