--- a/play-canvas/phrase_image.html
+++ b/play-canvas/phrase_image.html
@@ -27,7 +27,8 @@
     const length = Math.max(sentence.length, 5);
     const fontSize = (canvas.width - 60) / ((length ?? 7) + 0.5);
     ctx.font = `bold ${fontSize}px 'Noto Sans JP'`;
-    const width = (canvas.width - fontSize * length) / 2;
+    const textWidth = ctx.measureText(sentence).width;
+    const width = (canvas.width - textWidth) / 2;
     const height = (canvas.height + fontSize) / 2;
     ctx.fillText(sentence, width, height);
   </script>
